# modular-agent-desktop

./: CLA.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cla.yml
signatures/version1/: cla.json
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent_stream_app/: app.rs  observer.rs  settings.rs
src-tauri/src/mak_desktop/: app.rs  autostart.rs  observer.rs  settings.rs  shortcut.rs  tray.rs
src-tauri/src/modular_agent_desktop/: app.rs  autostart.rs  observer.rs  settings.rs  shortcut.rs  tray.rs
src/lib/: agent.test.ts  agent.ts  hotkeys.ts  log-store.svelte.ts  mak.ts  modular_agent.ts  preset-tree-store.svelte.ts  sanitize.ts  shared.svelte.ts  tab-store.svelte.ts  titlebar-state.svelte.ts  types.ts  utils.ts
src/lib/components/: app-sidebar.svelte  attribution.svelte  flow-status.svelte  nav-main.svelte  nav-presets.svelte  nav-secondary.svelte  new-preset-dialog.svelte  new-stream-dialog.svelte  preset-action-dialog.svelte  preset-delete-dialog.svelte  preset-status.svelte  titlebar.svelte
src/lib/components/agent-list/: agent-list-item.svelte  agent-list.svelte  index.ts  types.ts
src/lib/components/preset-editor/: agent-config.svelte  agent-node.svelte  context.svelte.ts  editor-canvas.svelte  editor-header.svelte  editor-host.svelte  editor-instance.svelte  editor-tabs.svelte  history.svelte.ts  index.ts  markdown-input.svelte  menubar.svelte  messages.svelte  node-base.svelte  node-context-menu.svelte  pane-context-menu.svelte  preset-actions.svelte  preset-name.svelte
src/lib/components/preset-file-list/: index.ts  preset-file-list-file.svelte  preset-file-list-folder.svelte  preset-file-list.svelte  types.ts
src/lib/components/preset-list/: index.ts
src/lib/components/ui/sonner/: sonner.svelte
src/routes/: +layout.svelte  +layout.ts  +page.ts
src/routes/(agents)/: +page.svelte  AgentConfig.svelte  AgentList.svelte  AgentListItems.svelte  AgentNode.svelte  FileMenu.svelte  NodeBase.svelte  StreamList.svelte  StreamListItems.svelte
src/routes/(preset_list)/: +page.svelte  preset-list-actions.svelte  preset-list-name.svelte  preset-list.svelte
src/routes/(stream_list)/: +page.svelte  stream-list-actions.svelte  stream-list-status.svelte  stream-list.svelte
src/routes/logs/: +page.svelte
src/routes/open_presets/: +page.svelte  +page.ts  preset-list-actions.svelte  preset-list.svelte
src/routes/preset_editor/: +layout.svelte
src/routes/preset_editor/[id]/: +layout.svelte  +page.svelte  +page.ts  agent-config.svelte  agent-list-item.svelte  agent-node.svelte  menubar.svelte  messages.svelte  node-base.svelte  preset-name.svelte
src/routes/presets/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte  Agent.svelte  Core.svelte
src/routes/stream_editor/[id]/: +page.svelte  +page.ts  agent-config.svelte  agent-list.svelte  agent-node.svelte  menubar.svelte  messages.svelte  node-base.svelte  stream-actions.svelte
