[package]
name = "mak-desktop"
version = "0.11.0"
description = "MAK Desktop"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2021"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mak_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12.3"

[dependencies]
anyhow = "1"
ctrlc = "3.4.5"
dirs = "6.0"
log = "0.4.25"
mak-cozodb-agents = { git = "https://github.com/modular-agent/mak-cozodb-agents.git", tag = "v0.6.0" }
mak-lancedb-agents = { git = "https://github.com/modular-agent/mak-lancedb-agents.git", tag = "v0.2.0" }
mak-lifelog-agents = { git = "https://github.com/modular-agent/mak-lifelog-agents.git", tag = "v0.4.0" }
mak-llm-agents = { git = "https://github.com/modular-agent/mak-llm-agents.git", tag = "v0.9.0" }
mak-std-agents = { git = "https://github.com/modular-agent/mak-std-agents.git", tag = "v0.10.0" }
mak-web-agents = { git = "https://github.com/modular-agent/mak-web-agents.git", tag = "v0.3.0" }
modular-agent-kit = "0.20.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-mak = "0.11.0"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2.3"
tauri-plugin-window-state = "2"

# [patch.crates-io]
# modular-agent-kit = { path = "../../modular-agent-kit/modular-agent-kit" }
# mak-cozodb-agents = { path = "../../mak-cozodb-agents" }
# mak-lancedb-agents = { path = "../../mak-lancedb-agents" }
# mak-lifelog-agents = { path = "../../mak-lifelog-agents" }
# mak-llm-agents = { path = "../../mak-llm-agents" }
# mak-std-agents = { path = "../../mak-std-agents" }
# mak-web-agents = { path = "../../mak-web-agents" }
# tauri-plugin-mak = { path = "../../tauri-plugin-mak" }
