[package]
name = "modular-agent-desktop"
version = "0.12.0"
description = "Modular Agent Desktop Application"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2021"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "modular_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12.3"

[dependencies]
anyhow = "1"
ctrlc = "3.4.5"
dirs = "6.0"
log = "0.4.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }

modular-agent-kit = "0.21.0"
tauri-plugin-modular-agent = "0.12.0"

modular-agent-cozodb = { git = "https://github.com/modular-agent/modular-agent-cozodb.git", tag = "v0.7.0" }
modular-agent-lancedb = { git = "https://github.com/modular-agent/modular-agent-lancedb.git", tag = "v0.3.0" }
modular-agent-lifelog = { git = "https://github.com/modular-agent/modular-agent-lifelog.git", tag = "v0.5.0" }
modular-agent-llm = { git = "https://github.com/modular-agent/modular-agent-llm.git", tag = "v0.10.0" }
modular-agent-std = { git = "https://github.com/modular-agent/modular-agent-std.git", tag = "v0.11.0" }
modular-agent-web = { git = "https://github.com/modular-agent/modular-agent-web.git", tag = "v0.4.0" }
# modular-agent-cozodb = { path = "../../modular-agent-cozodb" }
# modular-agent-lancedb = { path = "../../modular-agent-lancedb" }
# modular-agent-lifelog = { path = "../../modular-agent-lifelog" }
# modular-agent-llm = { path = "../../modular-agent-llm" }
# modular-agent-std = { path = "../../modular-agent-std" }
# modular-agent-web = { path = "../../modular-agent-web" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2.3"
tauri-plugin-window-state = "2"

# [patch.crates-io]
# modular-agent-kit = { path = "../../modular-agent-kit/modular-agent-kit" }
# tauri-plugin-modular-agent = { path = "../../tauri-plugin-modular-agent" }
